--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
         <section class="weekForecast-part">
             <div class="day">
                 <div id="icon2"><img src="./icons/partly-sunny-outline.svg"/></div>
-                <div id="date2">day</div>
+                <div id="date2" class="date">day</div>
                 <div id='day2' class="day-tempreture">00</div>
             </div>
             <div  class="day">
                 <div id="icon3"><img src="./icons/partly-sunny-outline.svg"/></div>
-                <div id="date3">day</div>
+                <div id="date3" class="date">day</div>
                 <div id='day3' class="day-tempreture">00</div>
             </div>
             <div class="day">
                 <div id="icon4"><img src="./icons/partly-sunny-outline.svg"/></div>
-                <div id="date4">day</div>
+                <div id="date4" class="date">day</div>
                 <div id='day4' class="day-tempreture">00</div>
             </div>
             <div class="day">
                 <div id="icon5"><img src="./icons/partly-sunny-outline.svg"/></div>
-                <div id="date5">day</div>
+                <div id="date5" class="date">day</div>
                 <div id='day5' class="day-tempreture">00</div>
             </div>
         </section>
