--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Vidaloka&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;400;500;600;700&display=swap" rel="stylesheet">
     <title>Weather App</title>
 </head>
 <body>
-    
+    <div class="blur"></div>
+    <div class="blur" style="background-color: #e27fe2; top: 70%; left: 78%;"></div>
     <div class="container">    
         <h1>Welcome</h1>
         <div class="searchBar">
